# plptools

./: .editorconfig  .git-blame-ignore-revs  .gitignore  Doxyfile  Makefile.am  README.md  bootstrap.conf  configure.ac
.github/workflows/: build.yml  c-cpp.yml  documentation.yml
build-aux/: setup-mac-development.sh  smoke-tests.sh
etc/: .gitignore  ncpd.service.in  plpprintd.service.in  plptools.in  ttytap.c
lib/: Enum.cc  Enum.h  Makefile.am  bufferarray.cc  bufferarray.h  bufferstore.cc  bufferstore.h  channel.h  cli.cc  cli.h  cli_utils.cc  cli_utils.h  cliutils.cc  cliutils.h  connectionerror.cc  connectionerror.h  datalink.cc  datalink.h  deviceconfiguration.cc  deviceconfiguration.h  drive.cc  drive.h  fakepsion.cc  fakepsion.h  ini.cc  ini.h  iowatch.cc  iowatch.h  link.h  linkchannel.h  log.cc  log.h  mp_serial.c  mp_serial.h  ncp.cc  ncp.h  ncp_log.cc  ncp_log.h  ncpclient.h  ncpsession.cc  (+60 more)
ncpd/: Makefile.am  channel.cc  channel.h  datalink.cc  datalink.h  link.cc  link.h  linkchan.cc  linkchan.h  linkchannel.cc  linkchannel.h  main.cc  main.h  ncp.cc  ncp.h  ncp_log.cc  ncp_session.cc  ncp_session.h  ncpstatuscallback.h  packet.cc  packet.h  serialtransport.cc  serialtransport.h  socketchan.cc  socketchan.h  socketchannel.cc  socketchannel.h  tcptransport.cc  tcptransport.h  transport.h
plpftp/: Makefile.am  ftp.cc  ftp.h  main.cc
plpfuse/: Makefile.am  fuse.c  main.cc  plpfuse.h  rfsv_api.h
plpprint/: Makefile.am  plpprintd.cc  prolog.ps.in
po/: POTFILES.in  de.po  sv.po
sisinstall/: Makefile.am  fakepsion.cpp  fakepsion.h  psion.cpp  psion.h  sisfilelink.cpp  sisfilelink.h  sisinstaller.cpp  sisinstaller.h  sismain.cpp
tests/: Makefile.am  deviceconfigurationtests.cc  drivetests.cc  initests.cc  main.cc  pathtests.cc  pathutilstests.cc  plpdirenttests.cc  plpdrivetests.cc
